--- a/spacePuzzle.html
+++ b/spacePuzzle.html
@@ -25,7 +25,7 @@
   }
 </style>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="spacePuzzle.js"></script>
+<script src="spacePuzzle.js?1623723020743"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
